--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,8 +15,6 @@ spring.datasource.url=jdbc:mysql://healing.ceuy4iegap9i.ap-northeast-2.rds.amazo
 spring.datasource.username=healing4u
 # DB password
 spring.datasource.password=healing4u
-spring.datasource.mapper-locations=mybatis/mapper/*.xml
-mybatis.type-aliases-package=com.healing4u.healing4umobileWeb.mapper
 
 # JPA============================================
 spring.jpa.show-sql=true
@@ -28,7 +26,7 @@ spring.jpa.hibernate.ddl-auto=none
 # JPA? ???? Hibernate? ????? ??? SQL? ???? ????.
 spring.jpa.properties.hibernate.format_sql=true
 
-
+# thymeleaf
 # It is reflected immediately when there is a change in static resources.
 spring.devtools.livereload.enabled=true
 # The path to refer to thymeleaf
