mustache로 template 변환 & db 쿼리 진행중

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,6 @@ logging.level.org.springframework=debug
 logging.level.org.springframework.web=debug
 
 # MySQL=============================================
-
-
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # DB Source URL
 spring.datasource.url=jdbc:mysql://healing.ceuy4iegap9i.ap-northeast-2.rds.amazonaws.com:3306/healingDB?&serverTimezone=UTC&autoReconnect=true&allowMultiQueries=true&characterEncoding=UTF-8
@@ -22,21 +20,19 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 # DDL(create, alter, drop) ??? DB? ?? ??? ??? ? ??.
 spring.jpa.hibernate.ddl-auto=none
 
-
 # JPA? ???? Hibernate? ????? ??? SQL? ???? ????.
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.show_sql=true
+server.servlet.register-default-servlet=true
 
 # thymeleaf
 # It is reflected immediately when there is a change in static resources.
-spring.devtools.livereload.enabled=true
+#spring.devtools.livereload.enabled=true
 # The path to refer to thymeleaf
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
+#spring.thymeleaf.prefix=classpath:/templates/
+#spring.thymeleaf.suffix=.html
 # It does not leave a cache for thymeleaf. (true in operation)
-spring.thymeleaf.cache=false
+#spring.thymeleaf.cache=false
 # Check whether there is a file in the templates directory, or not, causing an error.
-spring.thymeleaf.check-template-location=true
-spring.thymeleaf.enabled=true
-
-
-server.servlet.register-default-servlet=true
+#spring.thymeleaf.check-template-location=true
+#spring.thymeleaf.enabled=true
