emotion&adId Query 코드 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=2004
 spring.devtools.restart.enabled=true
-
+spring.web.resources.static-locations=classpath:/static/
 # Logging============================================
 logging.level.org.springframework=debug
 logging.level.org.springframework.web=debug
